IMPALA-166 SimpleScheduler::HasHost should hold host_map_lock_